Fixing bug, where the feature image was too big on iOS.

--- a/less/widgets/feature.less
+++ b/less/widgets/feature.less
@@ -45,7 +45,6 @@
 	position: relative;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     min-height: 100%;
 	min-height: 100vh;
 	width: 100%;
